--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 bin/
 
 # IntelliJ
-.idea
+.idea/
 *.ipr
 *.iml
 *.iws
@@ -33,3 +33,6 @@ pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 release.properties
+
+# Emacs
+*~
